--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-   
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
@@ -18,6 +17,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "formik": "^2.4.6",
+    "html-react-parser": "^5.2.10",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "next-intl": "^4.3.12",
