--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "formik": "^2.4.6",
     "html-react-parser": "^5.2.10",
     "lucide-react": "^0.546.0",
-    "next": "^16.0.10",
+    "next": "^16.1.0-canary.19",
     "next-intl": "^4.5.8",
     "next-themes": "^0.4.6",
     "react": "^19.2.1",
